--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "css": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/app.css --watch",
     "server": "nodemon index.js"
   },
   "keywords": [
@@ -18,10 +19,15 @@
   "author": "Ariel Hurtado",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.12",
     "express": "^5.1.0",
     "pug": "^3.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^4.1.12"
   }
 }
