--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pug": "^3.0.3"
+    "mysql2": "^3.15.3",
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
