Workflow y env template

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,11 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=bienesraices
 
-EMAIL_HOST=sandbox
-EMAIL_PORT=1234
-EMAIL_USER=a8813en
-EMAIL_PASS=9998ana
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+
+BACKEND_URL=http://localhost
+
+JWT_SECRET=algoaqui
