--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "csurf": "^1.11.0",
     "dotenv": "^17.2.3",
     "dropzone": "^5.9.3",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
+    "pdfkit": "^0.17.2",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7"
   },
